Intégration bouton "fermer" dans le composant image-by-city et animation scroll lors d'un clic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <h2>{{title}}</h2>
   <nav>
     <p><a routerLink="home" routerLinkActive="active">Accueil</a></p>
-    <p><a routerLink="galerie" routerLinkActive="active">Galerie</a></p>
+    <p><a routerLink="galeries" routerLinkActive="active">Galeries</a></p>
     <p><a routerLink="destinations" routerLinkActive="active">Articles</a></p>
     <p><a routerLink="login" routerLinkActive="active">Ajouter</a></p>
     <p><a routerLink="rechercher" routerLinkActive="active">Rechercher</a></p>
