--- a/src/app/images-by-country/images-by-country.component.html
+++ b/src/app/images-by-country/images-by-country.component.html
@@ -1,69 +1,118 @@
 <h2>Galeries par pays</h2>
-<div id="liste_pays">
-  <div id="usa">
-  <h3>Etats-Unis</h3>
-    <ul class="heroes">
-      <li *ngFor="let americanCity of usa;index as i; odd as isOdd; even as isEven"
-          [class.odd]="isOdd" [class.even]="isEven"
-          (click)="onSelect(americanCity)">
-        {{i+1}}. {{americanCity.name}}
-      </li>
-    </ul>
+<div #cityWindowDisplay>
+  <app-image-by-city (closeWindowEmitter)="toggleDisplay($event)" *ngIf="!isShown" 
+  (citySelected)="showCityObject($event)" [city]="selectedCity"
+  (rate)="onRate($event)" ></app-image-by-city>
+
+  <h3>États-Unis</h3>
+  <div class="card-columns">
+    <div *ngFor="let city of usa" class="card">
+      <img src="https://media.tacdn.com/media/attractions-splice-spp-674x446/07/32/00/f8.jpg" 
+      class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{city.name}} {{city.country}}</h5>
+        <p class="card-text">
+          <button (click)="scrollToElement(cityWindowDisplay)" routerLinkActive="router-link-active" class="btn btn-info" (click)="onSelect(city)">Afficher</button>
+          <!-- <a routerLink="../city" routerLinkActive="active" (click)="onSelect(city)">Afficher</a> -->
+        </p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Visitée en ...</small>
+      </div>
+    </div>
   </div>
 
-  <div id="canada">
+
   <h3>Canada</h3>
-    <ul class="heroes">
-      <li *ngFor="let canadianCity of canada" (click)="onSelect(canadianCity)"
-          class="lovedCityHidden">
-      {{canadianCity.name}}
-      </li>
-    </ul>
+  <div class="card-columns">
+    <div *ngFor="let city of canada" class="card">
+      <img src="https://media.tacdn.com/media/attractions-splice-spp-674x446/07/32/00/f8.jpg" 
+      class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{city.name}} {{city.country}}</h5>
+        <p class="card-text">
+          <button (click)="scrollToElement(cityWindowDisplay)" routerLinkActive="router-link-active" class="btn btn-info" (click)="onSelect(city)">Afficher</button>
+          <!-- <a routerLink="../city" routerLinkActive="active" (click)="onSelect(city)">Afficher</a> -->
+        </p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Visitée en ...</small>
+      </div>
+    </div>
   </div>
 
-  <div id="nz">
   <h3>Nouvelle-Zélande</h3>
-  <ul class="heroes">
-    <li *ngFor="let kiwiCity of newZealand" (click)="onSelect(kiwiCity)"
-        class="lovedCityHidden">
-      {{kiwiCity.name}}
-    </li>
-  </ul>
+  <div class="card-columns">
+    <div *ngFor="let city of newZealand" class="card">
+      <img src="https://media.tacdn.com/media/attractions-splice-spp-674x446/07/32/00/f8.jpg" 
+      class="card-img-top" alt={{city.name}} title={{city.name}}>
+      <div class="card-body">
+        <h5 class="card-title">{{city.name}} {{city.country}}</h5>
+        <p class="card-text">
+          <button (click)="scrollToElement(cityWindowDisplay)" routerLinkActive="router-link-active" class="btn btn-info" (click)="onSelect(city)">Afficher</button>
+          <!-- <a routerLink="../city" routerLinkActive="active" (click)="onSelect(city)">Afficher</a> -->
+        </p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Visitée en ...</small>
+      </div>
+    </div>
   </div>
 
-  <div id="spain">
   <h3>Espagne</h3>
-  <ul class="heroes">
-    <li *ngFor="let spanishCity of spain" (click)="onSelect(spanishCity)"
-        class="lovedCityHidden">
-     {{spanishCity.name}}
-    </li>
-  </ul>
+  <div class="card-columns">
+    <div *ngFor="let city of spain" class="card">
+      <img src="https://media.tacdn.com/media/attractions-splice-spp-674x446/07/32/00/f8.jpg" 
+      class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{city.name}} {{city.country}}</h5>
+        <p class="card-text">
+          <button (click)="scrollToElement(cityWindowDisplay)" routerLinkActive="router-link-active" class="btn btn-info" (click)="onSelect(city)">Afficher</button>
+        </p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Visitée en ...</small>
+      </div>
+    </div>
   </div>
 
-  <div id="southAfrica">
   <h3>Afrique du Sud</h3>
-  <ul class="heroes">
-    <li *ngFor="let southafricanCity of southAfrica" (click)="onSelect(southafricanCity)"
-        class="lovedCityHidden">
-      {{southafricanCity.name}}
-    </li>
-  </ul>
+  <div class="card-columns">
+    <div *ngFor="let city of southAfrica" class="card">
+      <img src="https://media.tacdn.com/media/attractions-splice-spp-674x446/07/32/00/f8.jpg" 
+      class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{city.name}} {{city.country}}</h5>
+        <p class="card-text">
+          <button (click)="scrollToElement(cityWindowDisplay)" routerLinkActive="router-link-active" class="btn btn-info" (click)="onSelect(city)">Afficher</button>
+          <!-- <a routerLink="../city" routerLinkActive="active" (click)="onSelect(city)">Afficher</a> -->
+        </p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Visitée en ...</small>
+      </div>
+    </div>
   </div>
 
-  <div id="asia">
   <h3>Asie</h3>
-  <ul class="heroes">
-    <li *ngFor="let asiaCity of asia" (click)="onSelect(asiaCity)"
-        class="lovedCityHidden">
-     {{asiaCity.name}}
-    </li>
-  </ul>
+  <div class="card-columns">
+    <div *ngFor="let city of asia" class="card">
+      <img src="https://media.tacdn.com/media/attractions-splice-spp-674x446/07/32/00/f8.jpg" 
+      class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">{{city.name}} {{city.country}}</h5>
+        <p class="card-text">
+          <button (click)="scrollToElement(cityWindowDisplay)" routerLinkActive="router-link-active" class="btn btn-info" (click)="onSelect(city)">Afficher</button>
+          <!-- <a routerLink="../city" routerLinkActive="active" (click)="onSelect(city)">Afficher</a> -->
+        </p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Visitée en ...</small>
+      </div>
+    </div>
   </div>
-</div>
-<p id="iLoveThatCity"></p>
 <!-- émetteur intégré avec la méthode showCitySelected et son événement passé en paramètre qui représente la ville cliquée -->
-<app-image-by-city (citySelected)="showCityObject($event)" [city]="selectedCity"
-(rate)="onRate($event)"></app-image-by-city>
+<!-- <app-image-by-city (citySelected)="showCityObject($event)" [city]="selectedCity"
+(rate)="onRate($event)"></app-image-by-city> -->
 
 
