--- a/src/app/images-by-country/images-by-country.component.css
+++ b/src/app/images-by-country/images-by-country.component.css
@@ -1,4 +1,12 @@
-#liste_pays {
+.card-columns {
+  @include media-breakpoint-only(lg) {
+    column-count: 4;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 5;
+  }
+}
+/* #liste_pays {
   display: flex;
   justify-content: space-evenly;
 }
@@ -14,6 +22,6 @@ li.even {
 
 li.odd {
   color: red;
-}
+} */
 
 
