--- a/src/app/image-by-city/image-by-city.component.html
+++ b/src/app/image-by-city/image-by-city.component.html
@@ -1,37 +1,37 @@
 <div id="mainContainer">
   
   <div *ngIf="city" id="container" class="cityContainer" [ngClass]="includesSan()">
-    <button class="btn btn-danger" (click)="closeWindow()">Fermer</button>
     <h2 [class.applyColor]="applyColor">{{city.name | uppercase}}</h2>
-    <div>
+    <!-- <div>
       <label>name:
         <input [(ngModel)]="city.name" placeholder="name"/>
       </label>
-    </div>
-      <img [src]="city.image" [alt]="city.name" [title]="city.name"
+    </div> -->
+      <!-- <img [src]="city.image" [alt]="city.name" [title]="city.name"
       *ngIf="isImageVisible(); else noImage">
 
       <ng-template #noImage>
         <p>No image available.</p>
-      </ng-template>
+      </ng-template> -->
 
   <!-- Affichage du drapeau du pays selon la ville sélectionnée -->
-    <div [ngSwitch]="city.country">
-      <img *ngSwitchCase="'Usa'" src="../../assets/img/flags/us_flag.png" class="flagImg">
+    <p [ngSwitch]="city.country">
+      <img *ngSwitchCase="'États-Unis'" src="../../assets/img/flags/us_flag.png" class="flagImg">
       <img *ngSwitchCase="'Canada'" src="../../assets/img/flags/canada_flag.png" class="flagImg">
-      <img *ngSwitchCase="'Malaysia'" src="../../assets/img/flags/malaysia_flag.png" class="flagImg">
-      <img *ngSwitchCase="'Singapore'" src="../../assets/img/flags/singapore_flag.png" class="flagImg">
-      <img *ngSwitchCase="'New Zealand'" src="../../assets/img/flags/new_zealand_flag.png" class="flagImg">
-      <img *ngSwitchCase="'South Africa'" src="../../assets/img/flags/south_africa_flag.png" class="flagImg">
-      <img *ngSwitchCase="'Spain'" src="../../assets/img/flags/spain_flag.png" class="flagImg">
-    </div>
+      <img *ngSwitchCase="'Malaisie'" src="../../assets/img/flags/malaysia_flag.png" class="flagImg">
+      <img *ngSwitchCase="'Singapour'" src="../../assets/img/flags/singapore_flag.png" class="flagImg">
+      <img *ngSwitchCase="'Nouvelle-Zélande'" src="../../assets/img/flags/new_zealand_flag.png" class="flagImg">
+      <img *ngSwitchCase="'Afrique du Sud'" src="../../assets/img/flags/south_africa_flag.png" class="flagImg">
+      <img *ngSwitchCase="'Espagne'" src="../../assets/img/flags/spain_flag.png" class="flagImg">
+    </p>
 
-    <button (click)="showCountryName()">Which country ?</button>
+    <!-- <button (click)="showCountryName()">Which country ?</button>
     <div class="removeCountryNameClass" id="countryNameDiv"></div>
     <button (click)="changeBackgroundColor()">Change title</button>
     <button (click)="iLoveIt()" [style.color]="'red'">I love that city !</button>
-    <button (click)="cityDetails()">Read output object city</button>
-    <button (click)="onSelect(city)">Show map</button>
+    <button (click)="cityDetails()">Read output object city</button> -->
+    <button class="btn btn-warning" (click)="onSelect(city)">Afficher la carte</button>
+    <button class="btn btn-danger" (click)="closeWindow()">Fermer</button>
   </div>
   <!-- L'Input [city] passe en données la variable selectedCity, de type "City" -->
   <app-city-details [city]="selectedCity" class="removeCountryNameClass" id="cityMapDiv"></app-city-details>
