--- a/src/app/modal/modal.component.scss
+++ b/src/app/modal/modal.component.scss
@@ -42,3 +42,18 @@ cursor: pointer;
     display: block;
 }
 
+// Galerie
+// .img-thumbnail {
+//   width: 300px;
+//   height: 250px;
+// }
+
+.bigSizePic {
+  width: 700px;
+  height: 600px;
+  border: 2px solid red;
+}
+
+.shadow {
+  box-shadow: 2px 2px 2px 2px blue;
+}
