--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -10,7 +10,7 @@
       <div class="row">
         <div class="col-lg-12">
           <img (click)="openModalPic($event)" *ngFor="let city of city.album" 
-          [src]="city" alt="city" class="img-thumbnail">
+          [src]="city" [alt]="city.name" class="img-thumbnail">
         </div>
       </div>
     </div>
@@ -19,7 +19,7 @@
         <!-- Modal content -->
         <div class="modal-content">
           <span class="close" (click)="closeModalPic()">&times;</span>
-          <img [src]="clickedImg" alt="" id="cadre" (window:keyup.esc)="closeModalPic()">
+          <img [src]="clickedImg" [alt]="clickedImg" id="cadre" (window:keyup.esc)="closeModalPic()">
         </div>
       </div>
 
