--- a/src/app/destination-details/destination-details.component.html
+++ b/src/app/destination-details/destination-details.component.html
@@ -31,6 +31,6 @@
 
 <!-- Apparition une fois l'article supprimé -->
 <div [hidden]="!deleted">
-  <h4>Article supprimé avec succès !</h4>
+  <h4>Article supprimé</h4>
   <!-- <button class="btn btn-success" (click)="newDestination()">Ajouter</button> -->
 </div>
