--- a/src/app/search-destinations/search-destinations.component.html
+++ b/src/app/search-destinations/search-destinations.component.html
@@ -7,7 +7,7 @@
     </div>
     <div class="form-group">
       <label for="title">Titre : </label>
-      <input appHighlight type="text" class="form-control" id="name" required [(ngModel)]="title" name="name">
+      <input appHighlight type="text" class="form-control" id="name" required [(ngModel)]="title" name="title">
     </div>
     <div class="form-group">
       <label for="article">Mots-clés : </label>
