--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,5 @@
-<div id="calendar">
+<div id="calendar" > 
+    <!-- class="alert alert-warning" -->
     <div id="verticalYear">{{today | date: 'y' //`fr-FR`}}</div> 
     <div id="dayAndMonth">
         <p>{{ today | date: 'd' //`fr-FR`}}</p>
